--- a/package.json
+++ b/package.json
@@ -8,5 +8,9 @@
   "license": "MIT",
   "devDependencies": {
     "vuepress": "^1.9.10"
+  },
+  "scripts": {
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   }
 }
