--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "vuepress": "^1.9.10"
   },
   "scripts": {
-    "docs:dev": "vuepress dev docs",
+    "docs:dev": "NODE_OPTIONS=--openssl-legacy-provider vuepress dev docs",
     "docs:build": "vuepress build docs"
   }
 }
